.provarCaches/00D410000011HE0EAM/objects/rstk__integritylog__c.object
<CustomObject>
    <description>integritylog__c</description>
    <fields>
        <fullName>rstk__batchno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Batch No</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item Master</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ_Integritylogs (Inventory Item Master)</relationshipLabel>
        <relationshipName>ZZ_Integritylogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__compitemno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comp Item No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division Master</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>Integrity_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__errormessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item Master</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>Integrity_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__itemno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ZZ_Integritylogs</relationshipLabel>
        <relationshipName>ZZ_Integritylogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__projno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__type__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Log Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wocst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipName>Integrity_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZZ_Integritylog</label>
    <listViews>
        <fullName>rstk__Integrity_Log</fullName>
        <columns>NAME</columns>
        <columns>rstk__batchno__c</columns>
        <columns>rstk__type__c</columns>
        <columns>rstk__div__c</columns>
        <columns>rstk__item__c</columns>
        <columns>rstk__errormessage__c</columns>
        <columns>rstk__projno__c</columns>
        <columns>rstk__ordno__c</columns>
        <columns>rstk__compitemno__c</columns>
        <columns>rstk__proj__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Integrity Log</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ_Integritylogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>